--- a/src/components/NavBar/NavBar.styles.css
+++ b/src/components/NavBar/NavBar.styles.css
@@ -1,5 +1,7 @@
 .navbarContainer{
-  position:absolute;
+  position: sticky;
+  top: 0;
+  z-index: 1;
   width: 100%;
   display: flex;
   background-color: white;
@@ -16,3 +18,5 @@
   padding-left: 15px;
   padding-bottom: 10px;
 }
+
+
