--- a/src/components/ItemDetail/ItemDetail.style.css
+++ b/src/components/ItemDetail/ItemDetail.style.css
@@ -1,10 +1,18 @@
 .producto{
-    width: 300px;
-    height: 400px;
-    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-left: 50px;
+    flex-wrap: wrap;
+    width: 50%;
+    height: 25%;
+    
     color: blue;
     background-color: white;
     font-size: 20px;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .imagenP{
