--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,6 +1,16 @@
-.lista{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-        
+/* PRODUCTS: CONTAINER */
+.products__container {
+  max-width: 1200px;
+  margin: 20px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-auto-rows: auto;
+  gap: 20px;
+}
+
+@media (max-width: 1266px) {
+  .products__container {
+    max-width: 100%;
+    padding: 0 20px;
+  }
 }
