--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -40,14 +40,24 @@
   border-radius: 10px 10px 0 0;
 }
 
+.seguir{
+  background-color:  #1310d4;
+  color: #ffffff;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 300px;
+  height: 50px;
+}
+
 .productoBoton{
   border: none;
-  background-color:  #1310d4;
+  background-color:  #b80532;
   color: #ffffff;
   font-weight: bold;
   border-radius: 10px;
   padding: 15px 0;
   cursor: pointer;
-  width: 80%;
-  
+  width: 17%;
 }
+
